# satori-rs

./: .gitignore  Cargo.toml  README.md
crates/satori/: Cargo.toml
crates/satori-builder/: Cargo.toml
crates/satori-builder/src/: background_image.rs  border.rs  border_radius.rs  clip_path.rs  mask_image.rs  rect.rs  shadow.rs  svg.rs  text.rs  text_decoration.rs  transform.rs
crates/satori-css/: Cargo.toml
crates/satori-css/src/: expand.rs  gradient.rs  lib.rs  style.rs
crates/satori-font/: Cargo.toml
crates/satori-font/src/: lib.rs  parsed.rs  path_d.rs  ttf_outline.rs
crates/satori-tests/: Cargo.toml
crates/satori-tests/examples/: diff_pixels.rs  dump_svg.rs  raster_external.rs
crates/satori-tests/fixtures/: background-clip__background-clip-should-preserve-color__1.json  background-clip__background-clip-should-render-background-clip-text-compatible-with-mask__1.json  background-clip__background-clip-should-render-background-clip-text__1.json  background-clip__background-clip-should-render-webkit-text-fill-color-transparent-as-gradient-text__1.json  basic__basic-should-combine-text-nodes-correctly__1.json  basic__basic-should-render-basic-div-with-background-color__1.json  basic__basic-should-render-basic-div-with-text__1.json  basic__basic-should-render-empty-div__1.json  basic__basic-should-support-array-in-jsx-children__1.json  basic__basic-should-support-custom-components__1.json  border__border-border-color-should-fallback-border-color-to-the-current-color__1.json  border__border-border-color-should-render-black-border-by-default__1.json  border__border-border-color-should-support-overriding-border-color__1.json  border__border-border-radius-should-not-exceed-the-length-of-the-short-side__1.json  border__border-border-radius-should-support-slash-and-2-value-corner__1.json  border__border-border-should-support-the-shorthand__1.json  border__border-border-width-should-render-border-inside-the-shape__1.json  box-sizing__box-sizing-should-support-content-box__1.json  clip-path__clip-path-should-make-clip-path-compatible-with-overflow__1.json  clip-path__clip-path-should-render-clip-path__1.json  clip-path__clip-path-should-render-clip-path__2.json  clip-path__clip-path-should-render-clip-path__3.json  clip-path__clip-path-should-render-clip-path__4.json  clip-path__clip-path-should-render-clip-path__5.json  clip-path__clip-path-should-render-clip-path__6.json  color-models__color-models-background-color-and-color-should-support-currentcolor-when-background__1.json  color-models__color-models-background-color-and-color-should-support-currentcolor-when-border__1.json  color-models__color-models-background-color-and-color-should-support-currentcolor-when-inherit__1.json  color-models__color-models-background-color-and-color-should-support-hexadecimal-with-transparency__1.json  color-models__color-models-background-color-and-color-should-support-hexadecimal__1.json  color-models__color-models-background-color-and-color-should-support-hsl__1.json  color-models__color-models-background-color-and-color-should-support-hsla__1.json  color-models__color-models-background-color-and-color-should-support-inherit-color__1.json  color-models__color-models-background-color-and-color-should-support-predefined-color-names__1.json  color-models__color-models-background-color-and-color-should-support-rgba__1.json  color-models__color-models-should-support-css4-syntax-color-in-hsl-if-inherited__assertions.json  coverage-builders__coverage-filler-builders-border-radius-should-resolve-size-correctly-when-one-side-is-small-and-other-exceeds-the-limit__1.json  coverage-builders__coverage-filler-builders-clip-path-should-return-empty-string-for-unrecognized-clip-path-value__assertions.json  coverage-builders__coverage-filler-builders-mask-image-should-render-no-mask-when-mask-image-is-none__assertions.json  coverage-builders__coverage-filler-builders-text-debug-rect-should-render-a-debug-bounding-rect-around-text-when-debug-embed-font-false__assertions.json  (+412 more)
crates/satori-tests/src/: harness.rs  lib.rs  snapshot.rs
crates/satori-tests/tests/: _smoke_resvg.rs  background_clip.rs  basic.rs  border.rs  box_sizing.rs  clip_path.rs  color_models.rs  coverage_builders.rs  coverage_gradients.rs  coverage_images.rs  coverage_layout.rs  coverage_mocks.rs  coverage_parser.rs  coverage_supplemental.rs  coverage_text.rs  coverage_units_round2.rs  css_variables.rs  display.rs  display_contents.rs  dynamic_size.rs  embed_font.rs  emoji.rs  error.rs  event.rs  flexbox_advanced.rs  font.rs  font_units.rs  gap.rs  gradient.rs  handler_edges.rs  handler_units.rs  image.rs  image_units.rs  jsx_runtime.rs  language.rs  layout.rs  letter_spacing.rs  line_clamp.rs  line_height.rs  margin.rs  (+24 more)
crates/satori-text/: Cargo.toml
crates/satori-text/src/: lib.rs
crates/satori/src/: lib.rs
examples/: diff_pixels.rs  dump_svg.rs  raster_external.rs
fixtures/: background-clip__background-clip-should-render-background-clip-text-compatible-with-transform__1.json  background-clip__background-clip-should-render-webkit-text-fill-color-as-white-over-gradient__1.json  basic__basic-should-render-basic-div-with-text-and-background-color__1.json  basic__basic-should-respect-points-scale-factor__1.json  basic__basic-should-support-custom-components__2.json  basic__basic-should-support-hex-colors__1.json  basic__basic-should-support-skipping-embedded-fonts__1.json  border__border-border-color-should-support-specifying-border-color__1.json  border__border-border-radius-should-support-percentage-border-radius__1.json  border__border-border-radius-should-support-radius-for-a-certain-corner__1.json  border__border-border-radius-should-support-the-shorthand__1.json  border__border-border-radius-should-support-vw-vh-em-and-rem-units__1.json  border__border-border-style-should-support-dashed-border__1.json  border__border-directional-should-support-advanced-border-with-radius__1.json  border__border-directional-should-support-directional-border__1.json  border__border-directional-should-support-non-complete-border__1.json  (+320 more)
(+103 files in other folders)
