[workspace]
resolver = "2"
members = [
    "crates/satori",
    "crates/satori-css",
    "crates/satori-font",
    "crates/satori-jsx",
    "crates/satori-layout",
    "crates/satori-builder",
    "crates/satori-text",
    "crates/satori-handler",
    "crates/satori-tests",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/local/satori-rs"

# Workspace-wide lint configuration. The Satori port mirrors the JS
# source 1:1 — its rendering functions take ~8-11 positional arguments
# because the JS originals do too, and refactoring into argument structs
# would obscure that correspondence. Doc-list-without-indent is a
# rustdoc styling preference that conflicts with the markdown style of
# the JS originals we ported docstrings from.
[workspace.lints.clippy]
too_many_arguments = "allow"
doc_lazy_continuation = "allow"

[workspace.dependencies]
satori = { path = "crates/satori" }
satori-css = { path = "crates/satori-css" }
satori-font = { path = "crates/satori-font" }
satori-jsx = { path = "crates/satori-jsx" }
satori-layout = { path = "crates/satori-layout" }
satori-builder = { path = "crates/satori-builder" }
satori-text = { path = "crates/satori-text" }
satori-handler = { path = "crates/satori-handler" }

# core deps used across crates
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
anyhow = "1"
once_cell = "1"
smallvec = "1"
indexmap = "2"
ahash = "0.8"
regex = "1"
unicode-segmentation = "1"
unicode-bidi = "0.3"
unicode-script = "0.5"
unicode-properties = "0.1"

# layout: pure-Rust port of Facebook's Yoga, published as `yoga-rs` on crates.io.
# Replaces the historical `yoga = "0.5"` C-binding crate.
yoga = { package = "yoga-rs", version = "0.1.0" }

# css parsing
cssparser = "0.34"
lightningcss = "1.0.0-alpha.66"

# fonts and text. `fontdb`'s major version is no longer pinned by
# anyone outside satori-rs (we no longer thread through `resvg`/`usvg`
# whose transitive pin was 0.9.x); track the latest stable line and
# let `cargo update` resolve a compatible patch release (audit #6).
ttf-parser = "0.25"
fontdb = "0.23"
rustybuzz = "0.20"
unicode-linebreak = "0.1"

# Image / SVG / rasterisation: pure Rust, in-process.
resvg = { version = "0.22", default-features = false, features = ["filter"] }
usvg = { version = "0.22", default-features = false, features = ["filter", "text"] }
tiny-skia = "=0.6.3"
png = "0.17"

# misc
base64 = "0.22"
flate2 = "1"
zune-jpeg = "0.4"
