[package]
name = "satori-rs"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
description = "Pure-Rust reimplementation of Vercel Satori"
repository = "https://github.com/lolistream/satori-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"

cssparser = "0.34"
lightningcss = "1.0.0-alpha.66"

ttf-parser = "0.25"
fontdb = "0.23"
rustybuzz = "0.20"

unicode-bidi = "0.3"
unicode-segmentation = "1"
unicode-script = "0.5"
unicode-properties = "0.1"
unicode-linebreak = "0.1"

# Pure-Rust port of Facebook's Yoga, published as `yoga-rs` on crates.io.
# Replaces the historical `yoga = "0.5"` C-binding crate.
yoga = { package = "yoga-rs", version = "0.1.0" }

base64 = "0.22"

# Pure-Rust port of msun libm. Used in the conic-gradient renderer because
# its sin/cos output matches V8 (JS satori) bit-for-bit, while the platform
# libm differs by 1 ULP on some inputs and would propagate into emitted SVG
# path coordinates, breaking pixel-perfect snapshot comparison.
libm = "0.2"

[dev-dependencies]
# Test harness: in-process rasterization for pixel-snapshot comparison.
# Pinned to fontdb 0.9 because resvg 0.22's usvg API expects that major.
resvg = { version = "0.22", default-features = false, features = ["filter"] }
usvg = { version = "0.22", default-features = false, features = ["filter", "text"] }
tiny-skia = "=0.6.3"
png = "0.17"
# Aliased to avoid colliding with the runtime fontdb 0.23 dependency: usvg
# 0.22 was built against fontdb 0.9, so the harness must pull that major in
# a side-by-side compilation unit.
fontdb_legacy = { package = "fontdb", version = "0.9" }

# Satori mirrors the JS source 1:1 — its rendering functions take ~8-11
# positional arguments because the JS originals do too, and refactoring into
# argument structs would obscure that correspondence. Doc-list-without-indent
# is a rustdoc styling preference that conflicts with the markdown style of
# the JS originals we ported docstrings from.
[lints.clippy]
too_many_arguments = "allow"
doc_lazy_continuation = "allow"
