[package]
name = "satori-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
satori-css.workspace = true
satori-font.workspace = true
satori-text.workspace = true
satori-layout.workspace = true
# Pure-Rust port of msun libm. Used in the conic-gradient renderer because
# its `sin`/`cos` output matches V8 (JS satori) bit-for-bit, while the
# platform libm (Apple's on macOS) differs by 1 ULP on some inputs. Those
# 1-ULP differences would otherwise propagate into the emitted SVG path
# coordinates and break the pixel-perfect snapshot comparison.
libm = "0.2"

[lints]
workspace = true
