[package]
name = "satori-css"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cssparser.workspace = true
lightningcss.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
