[package]
name = "satori-font"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ttf-parser.workspace = true
fontdb.workspace = true
rustybuzz.workspace = true
unicode-script.workspace = true
unicode-properties.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
