[package]
name = "satori-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
satori.workspace = true
satori-jsx.workspace = true
satori-font.workspace = true
# In-process pure-Rust rasterizer.
resvg.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
fontdb = "0.9"
png.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

[dev-dependencies]

[lints]
workspace = true
