[package]
name = "satori-text"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
satori-font.workspace = true
unicode-bidi.workspace = true
unicode-segmentation.workspace = true
unicode-script.workspace = true
unicode-linebreak.workspace = true
rustybuzz.workspace = true
ttf-parser.workspace = true
once_cell.workspace = true

[lints]
workspace = true
