[package]
name = "satori"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust reimplementation of Vercel Satori"

[dependencies]
satori-css.workspace = true
satori-font.workspace = true
satori-jsx.workspace = true
satori-layout.workspace = true
satori-builder.workspace = true
satori-text.workspace = true
satori-handler.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-segmentation = { workspace = true }

[lints]
workspace = true
